--- a/.github/workflows/hdb.yml
+++ b/.github/workflows/hdb.yml
@@ -13,3 +13,21 @@ jobs:
       - uses: actions/checkout@v4
       - name: Build the Docker image
         run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+        
+test:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.x"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest
+      - name: List directory structure
+        run: ls -R
+      - name: Run tests
+        run: pytest $(find . -name dummy.py)
