Criando Pipeline Bandit v2

--- a/.github/workflows/hdb.yml
+++ b/.github/workflows/hdb.yml
@@ -39,6 +39,7 @@ jobs:
       security-events: write
       actions: read
       contents: read
+      continue-on-error: true
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
