--- a/.github/workflows/hdb.yml
+++ b/.github/workflows/hdb.yml
@@ -60,3 +60,35 @@ jobs:
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: results.sarif
+          
+  dependency_check:
+    runs-on: ubuntu-latest
+    name: Dependency-Check
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.x"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Run OWASP Dependency-Check
+        uses: dependency-check/action@v3
+        with:
+          project: "Task-Manager-using-Flask"
+          scan: "."
+          format: "HTML"
+          output-directory: "./dependency-check-report"
+          fail-on-cvss: "7"
+          
+      - name: Upload Dependency-Check report
+        uses: actions/upload-artifact@v3
+        with:
+          name: Dependency-Check-report
+          path: ./dependency-check-report/dependency-check-report.html
