--- a/.github/workflows/hdb.yml
+++ b/.github/workflows/hdb.yml
@@ -62,33 +62,35 @@ jobs:
           sarif_file: results.sarif
           
   dependency_check:
+    needs: test
     runs-on: ubuntu-latest
     name: Dependency-Check
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
-
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: "3.x"
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
-      - name: Run OWASP Dependency-Check
-        uses: dependency-check/DependencyCheck-Action@master
+      - name: Dependency-Check
+        uses: dependency-check/Dependency-Check_Action@main
+        id: Dependency-Check
         with:
           project: "Task-Manager-using-Flask"
-          scan: "."
+          path: "."
           format: "HTML"
-          output-directory: "./dependency-check-report"
-          fail-on-cvss: "7"
-          
-      - name: Upload Dependency-Check report
+          out: "reports"
+          args: >
+            --scan "**/*.py"
+            --scan "requirements.txt"
+            --failOnCVSS 7
+            --enableRetired
+      - name: Upload Dependency-Check results
         uses: actions/upload-artifact@v3
         with:
-          name: Dependency-Check-report
-          path: ./dependency-check-report/dependency-check-report.html
+          name: Dependency-Check report
+          path: ${{github.workspace}}/reports
