--- a/.github/workflows/hdb.yml
+++ b/.github/workflows/hdb.yml
@@ -30,6 +30,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install pytest
           pip install -r requirements.txt
+      
+      - name: Set PYTHONPATH  # Adiciona o diretório raiz ao PYTHONPATH
+        run: |
+          export PYTHONPATH=$PYTHONPATH:$(pwd)
+
 
       - name: List directory structure
         run: ls -R
