--- a/.github/workflows/hdb.yml
+++ b/.github/workflows/hdb.yml
@@ -30,17 +30,16 @@ jobs:
           python -m pip install --upgrade pip
           pip install pytest
           pip install -r requirements.txt
-      
-      - name: Set PYTHONPATH  # Adiciona o diretório raiz ao PYTHONPATH
+
+      - name: Set PYTHONPATH  # Adicionar o diretório raiz ao PYTHONPATH
         run: |
           export PYTHONPATH=$PYTHONPATH:$(pwd)
-
 
       - name: List directory structure
         run: ls -R
 
       - name: Run tests
-        run: pytest $(find . -name testes.py)  # Executa o arquivo de testes
+        run: pytest $(find . -name testes.py)
       
   bandit:
     needs: test
@@ -77,17 +76,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: "3.x"
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
       - name: Dependency-Check
         uses: dependency-check/Dependency-Check_Action@main
         id: Dependency-Check
@@ -101,7 +97,6 @@ jobs:
             --scan "requirements.txt"
             --failOnCVSS 7
             --enableRetired
-
       - name: Upload Dependency-Check results
         uses: actions/upload-artifact@v3
         with:
