--- a/.github/workflows/hdb.yml
+++ b/.github/workflows/hdb.yml
@@ -94,3 +94,34 @@ jobs:
         with:
           name: Dependency-Check report
           path: ${{github.workspace}}/reports
+  dast:
+    needs: dependency_check
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      # Build the Docker image for Flask App (again, if necessary)
+      - name: Build Flask App Docker Image
+        run: docker build -t flask-app .
+
+      # Run Flask App in detached mode on port 5000
+      - name: Run Flask App
+        run: |
+          docker run -d -p 5000:5000 --name flask-app flask-app
+
+      # Wait for the Flask app to be ready
+      - name: Wait for Flask App to be ready
+        run: sleep 10  # Ajuste o tempo conforme necessário para a aplicação estar pronta
+
+      # Run OWASP ZAP for security scan
+      - name: Run OWASP ZAP Baseline Scan
+        run: |
+          docker run -v $(pwd):/zap/wrk/:rw -t owasp/zap2docker-stable zap-baseline.py -t http://localhost:5000 -r zap_report.html
+
+      # Upload the ZAP report as an artifact
+      - name: Upload ZAP Report
+        uses: actions/upload-artifact@v2
+        with:
+          name: ZAP Report
+          path: zap_report.html
