--- a/.github/workflows/hdb.yml
+++ b/.github/workflows/hdb.yml
@@ -94,36 +94,36 @@ jobs:
         with:
           name: Dependency-Check report
           path: ${{github.workspace}}/reports
-          
+
   dast:
-  needs: test
-  runs-on: ubuntu-latest
-  permissions:
-    contents: read
-    issues: write  # Permissão necessária para criar issues
-  steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+    needs: build
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      issues: write  # Permissão necessária para criar issues
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Build Docker image
-      run: docker build -t flask-app .
+      - name: Build Docker image
+        run: docker build -t flask-app .
 
-    - name: Run Flask app in Docker
-      run: |
-        docker run -d -p 5000:5000 --name flask-container flask-app
-        sleep 10
+      - name: Run Flask app in Docker
+        run: |
+          docker run -d -p 5000:5000 --name flask-container flask-app
+          sleep 10
 
-    - name: ZAP Scan
-      uses: zaproxy/action-full-scan@v0.10.0
-      with:
-        target: "http://localhost:5000"
+      - name: ZAP Scan
+        uses: zaproxy/action-full-scan@v0.10.0
+        with:
+          target: "http://localhost:5000"
 
-    - name: Upload ZAP Report
-      uses: actions/upload-artifact@v3
-      with:
-        name: ZAP Report
-        path: zap_report.html
+      - name: Upload ZAP Report
+        uses: actions/upload-artifact@v3
+        with:
+          name: ZAP Report
+          path: zap_report.html
 
-    - name: Stop Docker container
-      if: always()
-      run: docker stop flask-container
+      - name: Stop Docker container
+        if: always()
+        run: docker stop flask-container
