--- a/.github/workflows/hdb.yml
+++ b/.github/workflows/hdb.yml
@@ -96,7 +96,7 @@ jobs:
           path: ${{github.workspace}}/reports
 
   dast:
-    needs: build
+    needs: test
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -127,3 +127,83 @@ jobs:
       - name: Stop Docker container
         if: always()
         run: docker stop flask-container
+        
+  # Deploy para ambiente de review
+  review:
+    needs: dast
+    runs-on: ubuntu-latest
+    environment:
+      name: review
+      url: http://localhost:5001
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Build Docker image for review
+        run: docker build -t flask-app-review .
+
+      - name: Deploy to review environment
+        run: |
+          docker run -d -p 5001:5000 --name flask-app-review flask-app-review
+          sleep 10
+
+  # Deploy para estágio
+  deploy_stage:
+    needs: [review]
+    runs-on: ubuntu-latest
+    environment:
+      name: staging
+      url: http://staging.example.com  # URL do ambiente de estágio
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Build Docker image for staging
+        run: docker build -t flask-app-stage .
+
+      - name: Deploy to staging
+        run: |
+          docker run -d -p 5002:5000 --name flask-app-stage flask-app-stage
+          sleep 10
+
+      # Executar testes DAST no estágio
+      - name: ZAP Scan on Staging
+        uses: zaproxy/action-full-scan@v0.10.0
+        with:
+          target: "http://staging.example.com"  # URL do ambiente de estágio
+
+      - name: Upload ZAP Stage Report
+        uses: actions/upload-artifact@v3
+        with:
+          name: ZAP Stage Report
+          path: zap_report.html
+
+  # Aprovação manual para produção
+  approval:
+    needs: deploy_stage
+    runs-on: ubuntu-latest
+    steps:
+      - name: Await approval for production
+        uses: hmarr/auto-approve-action@v2
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          allow-approvals: true
+
+  # Deploy para produção
+  deploy_production:
+    needs: approval
+    runs-on: ubuntu-latest
+    environment:
+      name: production
+      url: http://production.example.com  # URL do ambiente de produção
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Build Docker image for production
+        run: docker build -t flask-app-production .
+
+      - name: Deploy to production
+        run: |
+          docker run -d -p 80:5000 --name flask-app-production flask-app-production
+          sleep 10
