Criando Pipeline Deploy em Estagio v1.1

--- a/.github/workflows/hdb.yml
+++ b/.github/workflows/hdb.yml
@@ -30,7 +30,7 @@ jobs:
       - name: List directory structure
         run: ls -R
       - name: Run tests
-        run: pytest $(find . -name dummy.py)
+        run: pytest $(find . -name testes.py)
         
   bandit:
     needs: test
