Criando Pipeline Deploy em Estagio v1.3

--- a/.github/workflows/hdb.yml
+++ b/.github/workflows/hdb.yml
@@ -16,21 +16,20 @@ jobs:
         
   test:
     needs: build
+    name: Testes
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
-          python-version: "3.x"
+          python-version: "3.9"
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pytest
-      - name: List directory structure
-        run: ls -R
+        run: | 
+          python -m pip install pytest 
+          python -m pip install Flask-Testing SQLAlchemy flask_sqlalchemy flask_login flask_bcrypt flask_wtf
       - name: Run tests
-        run: pytest $(find . -name testes.py)
+        run: PYTHONPATH=$PYTHONPATH:. pytest
         
   bandit:
     needs: test
