--- a/.github/workflows/hdb.yml
+++ b/.github/workflows/hdb.yml
@@ -29,7 +29,7 @@ jobs:
           python -m pip install pytest 
           python -m pip install Flask-Testing SQLAlchemy flask_sqlalchemy flask_login flask_bcrypt flask_wtf
       - name: Run tests
-        run: PYTHONPATH=$PYTHONPATH:. pytest
+        run: PYTHONPATH=$PYTHONPATH:. pytest tests/  # Certifique-se de apontar para o diretório correto
         
   bandit:
     needs: test
