--- a/.github/workflows/hdb.yml
+++ b/.github/workflows/hdb.yml
@@ -104,43 +104,40 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # Criação da rede Docker para comunicação entre ZAP e Flask
-      - name: Create Docker network
-        run: docker network create zap-network
-
-      # Build da imagem Docker da aplicação Flask
       - name: Build Docker image
         run: docker build -t flask-app .
 
-      # Execução da aplicação Flask no contêiner dentro da rede zap-network
       - name: Run Flask app in Docker
         run: |
-          docker run -d --network zap-network -p 5000:5000 --name flask-container flask-app
-          sleep 30  # Aguarda a inicialização da aplicação
+          docker run -d -p 5000:5000 --name flask-container flask-app
+          sleep 10  # Garantir que o app Flask tenha tempo para iniciar
 
-      # Execução do OWASP ZAP apontando para o contêiner Flask
+      # Listar os containers em execução para verificar se o Flask app está rodando
+      - name: List running Docker containers
+        run: docker ps
+
+      # Executar o ZAP Scan
       - name: ZAP Scan
         uses: zaproxy/action-full-scan@v0.10.0
         with:
           target: "http://flask-container:5000"
-          docker_name: "ghcr.io/zaproxy/zaproxy:stable"
+          docker_name: ghcr.io/zaproxy/zaproxy:stable
 
-      # Upload do relatório de segurança gerado pelo ZAP
+      # Listar arquivos gerados pelo ZAP para verificar onde o relatório foi criado
+      - name: Listar arquivos gerados pelo ZAP
+        run: ls -al /zap/wrk/
+
+      # Upload do relatório do ZAP
       - name: Upload ZAP Report
         uses: actions/upload-artifact@v3
         with:
           name: ZAP Report
-          path: zap_report.html
+          path: /zap/wrk/zap_report.html  # Caminho corrigido para o relatório
 
-      # Parada do contêiner Flask
+      # Parar o container do Flask app
       - name: Stop Docker container
         if: always()
         run: docker stop flask-container
-
-      # Remoção da rede Docker
-      - name: Remove Docker network
-        if: always()
-        run: docker network rm zap-network
         
   # Deploy para ambiente de review
   review:
