--- a/.github/workflows/hdb.yml
+++ b/.github/workflows/hdb.yml
@@ -112,7 +112,7 @@ jobs:
           docker run -d -p 5000:5000 --name flask-container flask-app
           sleep 10  # Garantir que o app Flask tenha tempo para iniciar
 
-      # Listar os containers em execução para verificar se o Flask app está rodando
+      # Verificar se o Flask App está rodando
       - name: List running Docker containers
         run: docker ps
 
@@ -121,18 +121,19 @@ jobs:
         uses: zaproxy/action-full-scan@v0.10.0
         with:
           target: "http://flask-container:5000"
-          docker_name: ghcr.io/zaproxy/zaproxy:stable
+          format: "html"  # Especifica o formato do relatório como HTML
+          report: "zap_report.html"  # Especifica o nome e caminho do relatório no diretório atual
 
-      # Listar arquivos gerados pelo ZAP para verificar onde o relatório foi criado
-      - name: Listar arquivos gerados pelo ZAP
-        run: ls -al /zap/wrk/
+      # Listar os arquivos gerados no diretório atual para verificar o relatório
+      - name: List current directory files
+        run: ls -al
 
       # Upload do relatório do ZAP
       - name: Upload ZAP Report
         uses: actions/upload-artifact@v3
         with:
           name: ZAP Report
-          path: /zap/wrk/zap_report.html  # Caminho corrigido para o relatório
+          path: zap_report.html  # Relatório gerado no diretório atual de trabalho
 
       # Parar o container do Flask app
       - name: Stop Docker container
