--- a/.github/workflows/hdb.yml
+++ b/.github/workflows/hdb.yml
@@ -103,17 +103,29 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
       - name: Build Docker image
         run: docker build -t task-image .
-      - name: Run application
+
+      - name: Run Flask app in Docker
         run: |
-          docker run -d -p 5000:5000 --name task-manager task-image
-          sleep 10
-      - name: Zap Scan
+          docker network create zap-net  # Cria uma rede Docker
+          docker run -d --network zap-net -p 5000:5000 --name task-manager task-image
+          sleep 10  # Aguarda o Flask iniciar
+
+      - name: ZAP Scan
         uses: zaproxy/action-full-scan@v0.10.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          target: "http://localhost:5000"
+          target: "http://task-manager:5000"  # Usa o nome do container como o alvo
+          docker_name: "ghcr.io/zaproxy/zaproxy:stable"
+        env:
+          ZAP_NETWORK: zap-net  # Coloca o ZAP na mesma rede que o container do Flask
+
+      - name: Stop and clean up
+        run: |
+          docker stop task-manager
+          docker network rm zap-net
         
   # Deploy para ambiente de review
   review:
