--- a/.github/workflows/hdb.yml
+++ b/.github/workflows/hdb.yml
@@ -119,8 +119,21 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           target: "http://task-manager:5000"  # Usa o nome do container como o alvo
           docker_name: "ghcr.io/zaproxy/zaproxy:stable"
+          format: "json,html,md"  # Especifica os formatos dos relatórios
+          report_json: "zap_report.json"
+          report_html: "zap_report.html"
+          report_md: "zap_report.md"
         env:
           ZAP_NETWORK: zap-net  # Coloca o ZAP na mesma rede que o container do Flask
+
+      - name: List ZAP Report Files
+        run: ls -al /zap/wrk/  # Verifica se os relatórios foram gerados corretamente
+
+      - name: Upload ZAP Report
+        uses: actions/upload-artifact@v3
+        with:
+          name: ZAP Report
+          path: /zap/wrk/zap_report.*  # Faz o upload de todos os formatos gerados (json, html, md)
 
       - name: Stop and clean up
         run: |
