--- a/.github/workflows/hdb.yml
+++ b/.github/workflows/hdb.yml
@@ -113,7 +113,7 @@ jobs:
           docker run -d --network zap-net -p 5000:5000 --name task-manager task-image
           sleep 10  # Aguarda o Flask iniciar
 
-      - name: ZAP Scan
+      - name: ZAP
         uses: zaproxy/action-full-scan@v0.10.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
