--- a/.github/workflows/hdb.yml
+++ b/.github/workflows/hdb.yml
@@ -102,43 +102,30 @@ jobs:
       issues: write  # Permissão necessária para criar issues
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
 
       - name: Build Docker image
-        run: docker build -t task-image .
+        run: docker build -t flask-app .
 
       - name: Run Flask app in Docker
         run: |
-          docker network create zap-net  # Cria uma rede Docker
-          docker run -d --network zap-net -p 5000:5000 --name task-manager task-image
-          sleep 10  # Aguarda o Flask iniciar
+          docker run -d -p 5000:5000 --name flask-container flask-app
+          sleep 10
 
-      - name: ZAP
+      - name: ZAP Scan
         uses: zaproxy/action-full-scan@v0.10.0
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          target: "http://task-manager:5000"  # Usa o nome do container como o alvo
-          docker_name: "ghcr.io/zaproxy/zaproxy:stable"
-          format: "json,html,md"  # Especifica os formatos dos relatórios
-          report_json: "zap_report.json"
-          report_html: "zap_report.html"
-          report_md: "zap_report.md"
-        env:
-          ZAP_NETWORK: zap-net  # Coloca o ZAP na mesma rede que o container do Flask
-
-      - name: List ZAP Report Files
-        run: ls -al /zap/wrk/  # Verifica se os relatórios foram gerados corretamente
+          target: "http://localhost:5000"
 
       - name: Upload ZAP Report
         uses: actions/upload-artifact@v3
         with:
           name: ZAP Report
-          path: /zap/wrk/zap_report.*  # Faz o upload de todos os formatos gerados (json, html, md)
+          path: zap_report.html
 
-      - name: Stop and clean up
-        run: |
-          docker stop task-manager
-          docker network rm zap-net
+      - name: Stop Docker container
+        if: always()
+        run: docker stop flask-container
         
   # Deploy para ambiente de review
   review:
