--- a/.github/workflows/hdb.yml
+++ b/.github/workflows/hdb.yml
@@ -165,3 +165,34 @@ jobs:
           assignee: ${{ github.actor }}
           label: automatic
           get_diff: true
+          
+  loki:
+    needs: dast
+    name: Setup do Loki
+    runs-on: ubuntu-latest
+    services:
+      loki:
+        image: grafana/loki:latest
+        ports:
+          - 3100:3100
+    steps:
+      - name: Configure Loki logging
+        run: |
+          docker run -d -v /var/log:/var/log grafana/promtail:latest -config.file=/etc/promtail/config.yml
+      - name: View logs with Loki
+        run: echo "Loki logs available at localhost:3100"
+
+  grafana:
+    needs: dast
+    name: Setup do Grafana
+    runs-on: ubuntu-latest
+    services:
+      grafana:
+        image: grafana/grafana:latest
+        ports:
+          - 3000:3000
+    steps:
+      - name: Access Grafana Dashboard
+        run: echo "Grafana running at http://localhost:3000"
+      - name: Configure Grafana
+        run: echo "Configure Loki as a data source in Grafana."
