--- a/.github/workflows/hdb.yml
+++ b/.github/workflows/hdb.yml
@@ -2,9 +2,15 @@ name: HdB
 
 on:
   push:
-    branches: ["master"]
+    branches:
+      - master
+      - develop
+      - stage
   pull_request:
-    branches: ["master"]
+    branches:
+      - master
+      - develop
+      - stage
 
 jobs:
   build:
